--- a/components/x98p86nsz-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/x98p86nsz-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: x98p86nsz-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b1d2392557.2omw.p3.openshiftapps.com/rhtap/rhtap-qe:2d040a420de6d1643a9b4402365886c55a54c89b@sha256:a7949799f246423f5da4c2578e3dbcc7ecc5320eb4bece15d5064e647cc5384d
+          name: container-image
